<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_yourlunch"
        android:icon="@drawable/ic_baseline_restaurant_menu_24"
        android:title="@string/your_lunch" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_baseline_power_settings_new_24"
        android:title="@string/logout" />
    <item
        android:id="@+id/chat"
        android:icon="@drawable/ic_baseline_chat_24"
        android:title="@string/chat" />
    <!--    </group>-->
</menu>
