<RelativeLayout android:id="@+id/RelativeLayout01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#5888">


    <ImageButton
        android:id="@+id/back_arrow_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#5888"
        android:clickable="true"
        android:focusable="true"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:src="@drawable/ic_baseline_arrow_back_24">

    </ImageButton>

    <TextView
        android:id="@+id/message_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:text="@string/settings"
        android:textSize="20sp"
        android:textStyle="bold">

    </TextView>

    <TextView
        android:id="@+id/message_text_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/message_title"
        android:layout_marginStart="30dp"
        android:layout_marginTop="13dp"
        android:text="@string/allow_notif"
        >
    </TextView>

    <ToggleButton
        android:id="@+id/yes_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/message_title"
        android:layout_marginStart="30dp"
        android:layout_toEndOf="@+id/message_text_question"
        android:backgroundTint="#5888"
        android:text="@string/yes_toggle"
        android:textStyle="bold" />

</RelativeLayout>